--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     color: #333;
     overflow-x: hidden;
     transition: 0.3s;
+    margin: 0;
 }
 
 * {
@@ -1957,4 +1958,19 @@ footer {
         max-width: 100vw !important;
     }
     
+}
+
+.info-section,
+.contact-section {
+    max-width: 100%; /* Ensure sections don't exceed the viewport width */
+    padding: 20px;
+    margin: 0 auto;
+}
+
+
+@media (max-width: 600px) {
+    .info-section,
+    .contact-section {
+        padding: 10px;
+    }
 }
