--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     color: #333;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     transition: 0.3s;
     margin: 0;
     width: 100%;
