--- a/styles.css
+++ b/styles.css
@@ -286,7 +286,7 @@ fieldset {
     position: relative;
     width: 100%;
     bottom: 40px;
-    box-shadow: 0 -4px 15px 15px #3c545a4d;
+    box-shadow: 0 -32px 15px 15px #3c545a4d;
     border-top-right-radius: 10%;
 }
 
@@ -1869,7 +1869,7 @@ footer {
     .new-search-container input {
         width: 40%;
         margin-right: 1px;
-        padding: 2px;
+        padding: 2px 10px;
         font-size:14px;
     }
 
