--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,11 @@ body {
     width: 100%;
 }
 
-header {
+/* header {
     position: fixed;
     width: 100%;
     z-index: 1000000;
-}
+} */
 
 a {
     text-decoration: none;
@@ -42,7 +42,7 @@ a.active {
     color: deepskyblue;
 }
 /* Navbar Styles */
-.navbar {
+/* .navbar {
     background-color: #333;
     color: #fff;
     padding: 10px 20px 0px;
@@ -52,8 +52,41 @@ a.active {
     position: relative;
     flex-wrap: wrap;
     padding-bottom: 16px;
-    /* width:100%; */
+} */
+
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 1000000;
+    top: 0;
+    transition: transform 0.3s ease-in-out;
 }
+
+.navbar {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    flex-wrap: wrap;
+    padding-bottom: 16px;
+}
+
+/* Hides the navbar when scrolled down */
+.navbar-hidden {
+    transform: translateY(-100%);
+}
+
+/* Shows the navbar when scrolling up */
+.navbar-visible {
+    transform: translateY(0);
+}
+
+
+
+
 .logo {
     margin: 10px 0px;
     border-radius: 10px;
