--- a/styles.css
+++ b/styles.css
@@ -1746,6 +1746,7 @@ footer {
     border: 1px solid #ddd;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 30px;
+    padding-top: 200px;
 }
 .section-forums-section {
     display: flex;
@@ -2025,6 +2026,9 @@ footer {
         max-width: 160px;
     }
     
+    .community-container {
+        padding-top: 100px;
+    }
 }
 
 .info-section,
